# BetterBlooket

./: .gitignore  LICENSE.txt  README.md  index.html  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.jsx  AuthRoute.jsx  ErrorBoundary.jsx  main.jsx  protobuf.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/blooks/: Blook.jsx  BlookEditor.jsx  CustomBlook.jsx  Particles.js  allBlooks.js  banners.js  blookEditor.css  classPass.js  packs.js  parts.js  stats.js  stats.jsx  titles.js
src/blooks/packs/: aquatic.js  arctic.js  blizzard.js  bot.js  breakfast.js  color.js  dino.js  farm.js  forest.js  hidden.js  iceMonster.js  medieval.js  outback.js  pet.js  safari.js  space.js  spooky.js  tropical.js  wonderland.js
src/components/: Alert.jsx  Fog.jsx  LoadingPage.jsx  Modal.jsx  PlayAudio.jsx  fog.css  loadingPage.css  modal.css  playAudio.css
src/context/: AuthContext.jsx  GameContext.jsx
src/pages/: Home.jsx  home.css
src/pages/auth/: Auth.jsx  Login.jsx  Register.jsx  auth.css
src/pages/dashboard/: AccountSwitcher.jsx  Blooks.jsx  Discover.jsx  Favorites.jsx  GameSet.jsx  History.jsx  Homework.jsx  Market.jsx  SetCreator.jsx  Sets.jsx  Settings.jsx  Sidebar.jsx  Stats.jsx  accounts.css  blooks.css  discover.css  gameSet.css  homeworks.css  market.css  sets.css  sidebar.css  stats.css
src/pages/host/: Assign.jsx  HW.jsx  Host.jsx  HostQuestion.jsx  (+14 more)
src/protobuf/: ListUnlockedBlooks.js  PurchaseBlookBoxIn.js  PurchaseBlookBoxInOut.js  protobuf.js
src/utils/: Fetch.js  LiveGameController.js  config.js  discordRPC.js  fileSystem.js  gameModes.js  images.js  location.js  numbers.js  protobuf.js  questions.js  queue.js
(+29 files in other folders)
