[package]
name = "betterblooket"
version = "0.0.0"
description = "A Blooket remake using Tauri"
authors = ["OneMinesraft2"]
license-file = "LICENSE.txt"
repository = "https://github.com/Minesraft2/BetterBlooket"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "fs-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
